# bm25-benchmarks

./: .gitignore  pyproject.toml
benchmark/: on_vchord_bm25.py
